modified footer and main

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     <footer>
-      <p>Powered by Prometeo</p>
+      <p>Powered by R2-D2</p>
     </footer>
   </body>
 </html>
